--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "paths": {
+      // Aliases for easier imports
+      "@/*": ["./src/*"],
+      "@assets/*": ["./assets/*"],
+    }
   }
 }
